--- a/jpa-etudes/random-anime-facts/.settings/org.eclipse.wst.common.component
+++ b/jpa-etudes/random-anime-facts/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Random Anime Facts">
+    <wb-module deploy-name="RandomAnimeFacts">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="Random_Anime_Facts"/>
-        <property name="java-output-path" value="/Random Anime Facts/build/classes"/>
+        <property name="context-root" value="RandomAnimeFacts"/>
+        <property name="java-output-path" value="/RandomAnimeFacts/build/classes"/>
     </wb-module>
 </project-modules>
