--- a/angular-course-loiane/primeiro-projeto/src/app/app.component.html
+++ b/angular-course-loiane/primeiro-projeto/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Olá, mundo!</h1>
 <meu-primeiro-component></meu-primeiro-component>
 <app-meu-primeiro2></app-meu-primeiro2>
+<app-cursos></app-cursos>
