--- a/angular-course-loiane/data-binding/src/app/data-binding/data-binding.component.html
+++ b/angular-course-loiane/data-binding/src/app/data-binding/data-binding.component.html
@@ -51,4 +51,35 @@
       Este texto só aparece em caso de Erro.
     </div>
   </article>
+
+  <article>
+    <h3>Event Binding</h3>
+    <div>
+      <button class="btn btn-primary" (click)="botaoClicado()">
+        Me clique!
+      </button>
+
+      <br />
+
+      <input
+        type="text"
+        (keyup)="onKeyUp($event)"
+        (keyup.enter)="salvarValor(campoInput.value)"
+        (blur)="salvarValor(campoInput.value)"
+        #campoInput
+      />
+      <p>Valor atual: {{ valorAtual }}</p>
+      <p>Valor salvo: {{ valorSalvo }}</p>
+
+      <br />
+
+      <span
+        (mouseover)="onMouseOverOut()"
+        (mouseout)="onMouseOverOut()"
+        [class.highlight]="isMousOver"
+      >
+        Passe o mouse sobre mim
+      </span>
+    </div>
+  </article>
 </section>
