--- a/angular-course-loiane/data-binding/src/app/data-binding/data-binding.component.html
+++ b/angular-course-loiane/data-binding/src/app/data-binding/data-binding.component.html
@@ -91,5 +91,7 @@
     <h3>Input/Output Properties</h3>
 
     <app-curso [nome]="nomeDoCurso"></app-curso>
+
+    <contador [valor]="10" (mudouValor)="onMudouValor($event)"></contador>
   </article>
 </section>
