--- a/angular-course-loiane/data-binding/src/app/app.component.html
+++ b/angular-course-loiane/data-binding/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-data-binding></app-data-binding> -->
-<app-ciclo *ngIf="!deletarCiclo" [valorInicial]="valor"></app-ciclo>
+<app-data-binding></app-data-binding>
+<!-- <app-ciclo *ngIf="!deletarCiclo" [valorInicial]="valor"></app-ciclo>
 <button class="btn btn-primary" (click)="mudarValor()">Mudar valor</button>
-<button class="btn btn-danger" (click)="destruirCiclo()">Deletar</button>
+<button class="btn btn-danger" (click)="destruirCiclo()">Deletar</button> -->
