--- a/angular-course-loiane/data-binding/src/app/data-binding/data-binding.component.html
+++ b/angular-course-loiane/data-binding/src/app/data-binding/data-binding.component.html
@@ -92,6 +92,9 @@
 
     <app-curso [nome]="nomeDoCurso"></app-curso>
 
-    <contador [valor]="10" (mudouValor)="onMudouValor($event)"></contador>
+    <app-contador
+      [valor]="10"
+      (mudouValor)="onMudouValor($event)"
+    />
   </article>
 </section>
