--- a/angular-course-loiane/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/angular-course-loiane/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -15,3 +15,14 @@
 <div [hidden]="!mostrarCursos">Lista de cursos aqui.</div>
 
 <div [hidden]="mostrarCursos">Não existem cursos para serem listados</div>
+
+<div *ngIf="mostrarCursos">Lista de cursos aqui.</div>
+
+<h5>Removendo o * e usando template</h5>
+
+<ng-template [ngIf]="mostrarCursos">
+  <div>Lista de cursos aqui.</div>
+</ng-template>
+
+<!-- Não funciona -->
+<div template="ngIf mostrarCursos">Lista de cursos aqui.</div>
