--- a/angular-course-loiane/diretivas/src/app/app.component.html
+++ b/angular-course-loiane/diretivas/src/app/app.component.html
@@ -3,4 +3,13 @@
 <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
-<app-operador-elvis></app-operador-elvis>
+<!-- <app-operador-elvis></app-operador-elvis> -->
+<app-exemplo-ng-content>
+  <div class="titulo">Título</div>
+  <div class="corpo">
+    <p>Teste</p>
+  </div>
+  <div class="corpo">
+    <p>Teste Again</p>
+  </div>
+</app-exemplo-ng-content>
