--- a/angular-course-loiane/diretivas/src/app/app.component.html
+++ b/angular-course-loiane/diretivas/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
 <!-- <app-operador-elvis></app-operador-elvis> -->
-<app-exemplo-ng-content>
+<!-- <app-exemplo-ng-content>
   <div class="titulo">Título</div>
   <div class="corpo">
     <p>Teste</p>
@@ -12,4 +12,5 @@
   <div class="corpo">
     <p>Teste Again</p>
   </div>
-</app-exemplo-ng-content>
+</app-exemplo-ng-content> -->
+<app-diretivas-customizadas></app-diretivas-customizadas>
