--- a/angular-course-loiane/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/angular-course-loiane/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,2 +1,5 @@
 <p fundoAmarelo>Texto com fundo amarelo</p>
+
 <button fundoAmarelo>Botão</button>
+
+<p highlightMouse>Texto com highlight quando passo o mouse</p>
