--- a/angular-course-loiane/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/angular-course-loiane/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -3,3 +3,7 @@
 <button fundoAmarelo>Botão</button>
 
 <p highlightMouse>Texto com highlight quando passo o mouse</p>
+
+<p [highlight]="'grey'" [highlightColor]="'magenta'">
+  Texto com highlight com cores customizadas
+</p>
