--- a/angular-course-loiane/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/angular-course-loiane/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -1,6 +1,6 @@
 <h1>Exemplos de pipes</h1>
 
-<p>Título: {{ livro.titulo | uppercase }}</p>
+<p>Título: {{ livro.titulo | uppercase | camelCase }}</p>
 <p>Estrelas: {{ livro.rating | number: "1.1-1" }}</p>
 <p>Páginas: {{ livro.numeroPaginas | number }}</p>
 <p>Preço: {{ livro.preco | currency: "BRL" }}</p>
